--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
           </span>
         </div>
         <video playsinline width="100%" autoplay muted loop>
-          <source
+          <!-- <source
             src="images/videos/options/express-menu.webm"
             type="video/webm"
-          />
+          /> -->
           <source
             src="images/videos/options/express-menu.mp4"
             type="video/mp4"
@@ -363,10 +363,10 @@
           </span>
         </div>
         <video playsinline width="100%" autoplay muted loop>
-          <source
+          <!-- <source
             src="images/videos/options/express-promotions.webm"
             type="video/webm"
-          />
+          /> -->
           <source
             src="images/videos/options/express-promotions.mp4"
             type="video/mp4"
@@ -382,10 +382,10 @@
           </span>
         </div>
         <video playsinline width="100%" autoplay muted loop>
-          <source
+          <!-- <source
             src="images/videos/options/express-locations.webm"
             type="video/webm"
-          />
+          /> -->
           <source
             src="images/videos/options/express-locations.mp4"
             type="video/mp4"
@@ -411,10 +411,10 @@
             <div class="card flip">
               <div class="front">
                 <video playsinline width="100%" autoplay muted loop>
-                  <source
+                  <!-- <source
                     src="images/videos/why-texas/on-the-go.webm"
                     type="video/webm"
-                  />
+                  /> -->
                   <source
                     src="images/videos/why-texas/on-the-go.mp4"
                     type="video/mp4"
@@ -437,10 +437,10 @@
             <div class="card flip">
               <div class="front">
                 <video playsinline width="100%" autoplay muted loop>
-                  <source
+                  <!-- <source
                     src="images/videos/why-texas/flavor.webm"
                     type="video/webm"
-                  />
+                  /> -->
                   <source
                     src="images/videos/why-texas/flavor.mp4"
                     type="video/mp4"
@@ -463,10 +463,10 @@
             <div class="card flip">
               <div class="front">
                 <video playsinline width="100%" autoplay muted loop>
-                  <source
+                  <!-- <source
                     src="images/videos/why-texas/promotions.webm"
                     type="video/webm"
-                  />
+                  /> -->
                   <source
                     src="images/videos/why-texas/promotions.mp4"
                     type="video/mp4"
